Use precompiled header

--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -70,92 +70,8 @@
     <ClCompile Include="..\TestORB\TestORB\module\ImplV3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="IDL\RecursiveStruct.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\RecursiveStruct_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_A1.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_A1_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I1.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I1_factory.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I1_factory_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I1_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I2.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I2_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I3.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I3_factory.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I3_factory_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_I3_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_V1.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_V1_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_V2.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_V2_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_V3.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_V3_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Union.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Union_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\ValueBox.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\ValueBox_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
     <ClCompile Include="..\TestORB\TestORB\module\PingPongImpl.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\PingPong.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\PingPong_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_AVT.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="IDL\Test_AVT_p.cpp">
-      <Filter>Generated</Filter>
     </ClCompile>
     <ClCompile Include="..\TestORB\TestORB\module\ImplAVT.cpp">
       <Filter>Source Files</Filter>
@@ -163,13 +79,100 @@
     <ClCompile Include="..\TestORB\TestORB\module\I1_factory_stateless.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="IDL\Test_Comp_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
     <ClCompile Include="..\TestORB\TestORB\module\comp_factory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="IDL\Test_Comp.cpp">
+    <ClCompile Include="..\TestORB\TestORB\module\pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\PingPong.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\PingPong_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\RecursiveStruct.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\RecursiveStruct_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_A1.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_A1_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_AVT.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_AVT_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_Comp.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_Comp_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I1.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I1_factory.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I1_factory_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I1_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I2.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I2_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I3.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I3_factory.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I3_factory_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_I3_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_V1.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_V1_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_V2.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_V2_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_V3.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Test_V3_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Union.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\Union_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\ValueBox.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\IDL\ValueBox_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
   </ItemGroup>
@@ -201,98 +204,104 @@
     <ClInclude Include="..\TestORB\TestORB\module\PortableI3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="IDL\RecursiveStruct.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\RecursiveStruct_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_A1.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_A1_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I1.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I1_factory.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I1_factory_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I1_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I2.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I2_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I3.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I3_factory.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I3_factory_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_I3_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_V1.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_V1_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_V2.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_V2_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_V3.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_V3_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Union.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Union_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\ValueBox.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\ValueBox_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\PingPong.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_AVT.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_AVT_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
     <ClInclude Include="..\TestORB\TestORB\include\I1_static.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="IDL\Test_Comp.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="IDL\Test_Comp_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
     <ClInclude Include="..\TestORB\TestORB\module\ImplComp.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\PingPong.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\PingPong_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\RecursiveStruct.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\RecursiveStruct_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_A1.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_A1_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_AVT.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_AVT_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_Comp.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_Comp_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I1.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I1_factory.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I1_factory_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I1_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I2.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I2_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I3.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I3_factory.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I3_factory_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_I3_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_V1.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_V1_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_V2.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_V2_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_V3.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Test_V3_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Union.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\Union_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\ValueBox.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\TestORB\module\IDL\ValueBox_s.h">
+      <Filter>Generated</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
